--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -61,13 +61,14 @@
                         </StackPanel.Resources>
 
                         <ItemsControl>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Black" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Red" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Silver" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Gray" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Green" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Yellow" Width="40" Height="40" HorizontalAlignment="Left"/>
-
+                            <Canvas>
+                                <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Black" Width="40" Height="40" HorizontalAlignment="Left" Canvas.Left="10" />
+                                <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Red" Width="40" Height="40" HorizontalAlignment="Left" Canvas.Left="60"/>
+                                <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Silver" Width="40" Height="40" HorizontalAlignment="Left" Canvas.Left="110"/>
+                                <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Gray" Width="40" Height="40" HorizontalAlignment="Left" Canvas.Left="160"/>
+                                <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Green" Width="40" Height="40" HorizontalAlignment="Left" Canvas.Left="210"/>
+                                <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Yellow" Width="40" Height="40" HorizontalAlignment="Left" Canvas.Left="260"/>
+                            </Canvas>
                         </ItemsControl>
                     </StackPanel>
                     <Label Width="700" Height="70" Margin="10" Content="3.Opony" FontSize="40"/>
