--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,20 +15,22 @@
 
 		<GroupBox Grid.ColumnSpan="2">
             
-			<ScrollViewer Height="800">
+			<ScrollViewer Height="800" Margin="12,0,-12,0">
 				<StackPanel Height="auto" RenderTransformOrigin="0.992,0.461">
 					<Label FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center">KONFIGURATOR</Label>
 
+                   
 
-					<Label Width="700" Height="70" Margin="10" Content="1.Silnik" FontSize="40"/>
+                    
+                    <Label Width="700" Height="70" Margin="10" Content="1.Silnik" FontSize="40"/>
 
-					<ComboBox Width="400" HorizontalAlignment="Left" Margin="100,30" Height="60" Name="SilnikiComboBox">
+					<ComboBox Width="400" HorizontalAlignment="Left" Margin="100,30" Height="60" Name="SilnikiComboBox" SelectionChanged="SilnikiComboBox_SelectionChanged">
 
                         <ComboBoxItem IsSelected="True">Wybierz z listy</ComboBoxItem>
 
                     </ComboBox>
 
-					<Label Content="Opis wyposażenia i osiągów (lista)" Margin="10"/>
+					<Label x:Name="OpisLabel" Margin="10"/>
 
 					<Label Width="700" Height="70" Margin="10" Content="2. Kolor" FontSize="40"/>
                     <StackPanel Grid.Row="0" Grid.Column="1">
@@ -58,23 +60,29 @@
                         </StackPanel.Resources>
 
                         <ItemsControl>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Black" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Red" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Silver" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Gray" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Green" Width="40" Height="40" HorizontalAlignment="Left"/>
-                            <RadioButton Content="../Resources/radio.png" Style="{StaticResource Flag}" BorderBrush="Yellow" Width="40" Height="40" HorizontalAlignment="Left"/>
+                            <RadioButton  Style="{StaticResource Flag}" BorderBrush="Black" Width="40" Height="40" BorderThickness="20" HorizontalAlignment="Left"/>
+                            <RadioButton  Style="{StaticResource Flag}" BorderBrush="Red" Width="40" Height="40" BorderThickness="20" HorizontalAlignment="Left"/>
+                            <RadioButton  Style="{StaticResource Flag}" BorderBrush="Silver" Width="40" Height="40" BorderThickness="20" HorizontalAlignment="Left"/>
+                            <RadioButton  Style="{StaticResource Flag}" BorderBrush="Gray" Width="40" Height="40" BorderThickness="20" HorizontalAlignment="Left"/>
+                            <RadioButton  Style="{StaticResource Flag}" BorderBrush="Green" Width="40" Height="40" BorderThickness="20" HorizontalAlignment="Left"/>
+                            <RadioButton  Style="{StaticResource Flag}" BorderBrush="Yellow" Width="40" Height="40" BorderThickness="20" HorizontalAlignment="Left"/>
 
                         </ItemsControl>
                     </StackPanel>
                     <Label Width="700" Height="70" Margin="10" Content="3.Opony" FontSize="40"/>
-                    <ComboBox Width="400" HorizontalAlignment="Left" Margin="100,30" Height="60">
+                    <ComboBox x:Name="OponyComboBox" Width="400" HorizontalAlignment="Left" Margin="100,30" Height="60">
 
                         <ComboBoxItem IsSelected="True">Wybierz z listy</ComboBoxItem>
-                        <ComboBoxItem >letnie 17''</ComboBoxItem>
-                        <ComboBoxItem >letnie 18''</ComboBoxItem>
+                       
                     </ComboBox>
                     <Label Width="700" Height="70" Margin="10" Content="4.Dodatki" FontSize="40"/>
+                    <ListBox x:Name="DodatkiListBox">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <CheckBox IsChecked="{Binding IsSelected}" Content="{Binding TheText}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                     <CheckBox Content="Przyciemniane szyby " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
                     <CheckBox Content="Listwy Chromowane " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
                     <CheckBox Content="Relingi dachowe " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
@@ -82,14 +90,22 @@
                     <CheckBox Content="Tylna dokładka" Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
                     <CheckBox Content="Spojler " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
                     <Label Width="700" Height="70" Margin="10" Content="5.Dodatkowe pakiety" FontSize="40"/>
+                    <ListBox x:Name="PakietyListBox">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <CheckBox IsChecked="{Binding IsSelected}" Content="{Binding TheText}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                     <CheckBox Content="Park Assist " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
                     <CheckBox Content="Navigation " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
                     <CheckBox Content="Power Seat " Margin="10" Width="200" Height="40" HorizontalAlignment="Left"/>
 
                     <Label Width="700" Height="70" Margin="10" Content="Kwota do zapłaty" FontSize="40"/>
 
-                    <Button Content="Zamawiam" Width="70" Height="70" HorizontalAlignment="Center" Click="Button_Click"/>
+                    <Button Content="Zamawiam" Width="70" Height="70" HorizontalAlignment="Center"/>
                     
+
 
                 </StackPanel>
 			</ScrollViewer>
