--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,18 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:przykład"
         mc:Ignorable="d"
-        Title="MainWindow" Width="450" Height="850">
+        Title="MainWindow" Width="500" Height="850">
     <Grid Height="808" VerticalAlignment="Top">
         <ScrollViewer Height="796" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0">
-            <StackPanel Height="auto" RenderTransformOrigin="0.992,0.461">
+            <StackPanel Height="auto" Width="auto" RenderTransformOrigin="0.992,0.461">
                 <Image Height="100" Width="100" Source="/logo.jpg"/>
                 <Label FontSize="35" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Wybierz swojego Carbon-a" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
                 <Label  Margin="10" Content="Silnik" FontSize="40" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
 
                 <ComboBox Width="400" HorizontalAlignment="Center" Height="60" Name="SilnikiComboBox" SelectionChanged="SilnikiComboBox_SelectionChanged" Margin="10,0,10,0">
-
-                    <ComboBoxItem IsSelected="True">Wybierz z listy</ComboBoxItem>
-
                 </ComboBox>
 
                 <Label Content="" x:Name="OpisLabel" Margin="10" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
@@ -76,7 +73,7 @@
 
                 <Label Margin="10" Content="Kwota do zapłaty" FontSize="40" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
 
-                <Button Content="Zamawiam" Width="70" Height="70" HorizontalAlignment="Center" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
+                <Button Content="Zamawiam" Width="70" Height="70" HorizontalAlignment="Center" FontFamily="Bahnschrift SemiBold SemiCondensed" Click="Button_Click"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
