--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Width="500" Height="850">
     <Grid Height="808" VerticalAlignment="Top">
-        <ScrollViewer Height="796" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0">
+        <ScrollViewer Height="796" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0">
             <StackPanel Height="auto" Width="auto" RenderTransformOrigin="0.992,0.461">
                 <Image Height="100" Width="100" Source="/logo.jpg"/>
                 <Label FontSize="35" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Wybierz swojego Carbon-a" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
@@ -16,7 +16,7 @@
                 <ComboBox Width="400" HorizontalAlignment="Center" Height="60" Name="SilnikiComboBox" SelectionChanged="SilnikiComboBox_SelectionChanged" Margin="10,0,10,0">
                 </ComboBox>
 
-                <Label Content="" x:Name="OpisLabel" Margin="10" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
+                <Label Content="" x:Name="OpisLabel" Margin="10" FontFamily="Bahnschrift SemiBold SemiCondensed" />
 
                 <Label Margin="10" Content="Kolor" FontSize="40" FontFamily="Bahnschrift SemiBold SemiCondensed" />
                 <StackPanel Grid.Row="0" Grid.Column="1">
@@ -45,8 +45,8 @@
                         </Style>
                     </StackPanel.Resources>
 
-                    <ItemsControl x:Name="KoloryLista">
-                    </ItemsControl>
+                    <ListBox x:Name="KoloryLista" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" SelectionMode="Single">
+                    </ListBox>
                 </StackPanel>
                 <Label Margin="10" Content="Opony" FontSize="40" FontFamily="Bahnschrift SemiBold SemiCondensed"/>
                 <ComboBox x:Name="OponyComboBox" Width="400" HorizontalAlignment="Center" Height="60" Margin="10,0,10,0">
